goldengoose.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldengoose
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: goldengoose
    track: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldengoose
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goldengoose
      track: prod
  template:
    metadata:
      labels:
        app: goldengoose
        track: prod
    spec:
      nodeSelector:
        app: goldengoose
      containers:
      - name: goldengoose
        image: dippynark/goldengoose
        resources:
          requests:
            cpu: "100m"
        ports:
        - containerPort: 8000
        readinessProbe:
          timeoutSeconds: 3
          httpGet:
            path: /
            port: 8000
        livenessProbe:
          timeoutSeconds: 10
          httpGet:
            path: /
            port: 8000
